dummy-corp-erp-golang-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dummy-corp-erp-golang-app
  namespace: dummy-corp-erp-namespace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dummy-corp-erp-golang-app
  template:
    metadata:
      labels:
        app: dummy-corp-erp-golang-app
    spec:
      containers:
      - name: dummy-corp-erp-golang-app
        image: localhost:32000/dummy-corp-erp-golang-app:latest  # Usar la imagen de tu registro local
        ports:
        - containerPort: 8080
        resources:
          limits:
            cpu: 500m
            memory: 128Mi
          requests:
            cpu: 100m
            memory: 32Mi
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8080
        readinessProbe:
          httpGet:
            path: /healthz
            port: 8080              
---
apiVersion: v1
kind: Service
metadata:
  name: dummy-corp-erp-golang-app-service
  namespace: dummy-corp-erp-namespace
spec:
  ports:
    - name: http-port
      port: 8080
      targetPort: 8080 # Debe coincidir con el puerto expuesto por el contenedor
      protocol: TCP
  selector:
    app: dummy-corp-erp-golang-app # Asegúrate de que coincida con las etiquetas del pod
