ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dummy-corp-erp-app-ingress
  namespace: dummy-corp-erp-namespace
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: public
  rules:
    - host: erp.mydomain.com
      http:
        paths:
          - path: /corp-erp-api/?(.*)
            pathType: Prefix
            backend:
              service:
                name: dummy-corp-erp-golang-app-service
                port:
                  number: 8080        
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: dummy-corp-erp-vite-nginx-app-service
                port:
                  number: 80
